# Otomasyon

./: .gitignore  PROJECT_BRAIN.md  README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py
backend/app/alerts/: __init__.py  results.py  rules.py
backend/app/api/: __init__.py  app.py  deps.py
backend/app/api/routes/: __init__.py  health.py  reports.py
backend/app/compliance/: __init__.py  guard.py
backend/app/core/: __init__.py  exceptions.py  models.py  types.py  validation.py
backend/app/data/: __init__.py
backend/app/data/adapters/: __init__.py  base.py  csv_importer.py  sqlite_adapter.py
backend/app/data/persistence/: __init__.py  db.py  holdings_repo.py  journal_repo.py  prices_repo.py  watchlist_repo.py
backend/app/journal/: __init__.py  models.py
backend/app/metrics/: __init__.py  engine.py  quality.py  results.py
backend/app/reports/: __init__.py  builder.py  models.py
backend/tests/: __init__.py
backend/tests/architecture/: __init__.py  test_no_broker_no_execution.py
backend/tests/integration/: __init__.py  test_api_reports.py  test_csv_import_holdings.py  test_csv_import_prices.py  test_csv_import_watchlist.py  test_db.py  test_holdings_repo.py  test_journal_repo.py  test_phase2_placeholder.py  test_prices_repo.py  test_sqlite_adapter.py  test_watchlist_repo.py
backend/tests/unit/: __init__.py  test_alerts.py  test_compliance.py  test_csv_importer.py  test_data_quality.py  test_journal.py  test_metrics.py  test_models.py  test_phase2_placeholder.py  test_phase3_placeholder.py  test_reports.py  test_validation.py
(+29 files in other folders)
